# project01

./: README.md  pyproject.toml
src/: main.py
src/models/: book.py
src/routers/: books.py
src/services/: book_service.py
src/web/: routes.py
src/web/templates/: books.html  layout.html
