[tool.poetry]
name = "project01"
version = "0.1.0"
description = "Python 기반 도서 관리 API 서버"
authors = ["kang-sangHee"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.34.0" }
pydantic = "^2.0"

[tool.poetry.group.dev.dependencies]
httpx = "^0.28.0"
pytest = "^8.0"
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
